--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -81,5 +81,6 @@
     <!-- ###################################################################################### -->
     <br>
     <!-- <div align="right"><p><a href="/aboutus" target="_blank">项目捐赠</a></p></div> -->
-    <div align="right"><p><a href="/temptest" target="_blank">临时测试</a></p></div>
+    <div align="right"><p><a href="/temptest" target="_blank">临时测试1</a></p></div>
+    <div align="right"><p><a href="/temptest2" target="_blank">临时测试2</a></p></div>
 {% endblock %}
