--- a/app/templates/portcarryout.html
+++ b/app/templates/portcarryout.html
@@ -16,6 +16,7 @@
     <div id="profit" class="chart600"></div>
     <div id="inportPrice" class="chart600"></div>
     <div id="gatherout" class="chart600"></div>
+    <div id="gatheroutBBW_ZZ" class="chart600"></div>
 
     <script type="text/javascript">
         // function fetchData(cb) {
@@ -758,7 +759,7 @@
                     xAxisIndex: 0,
                     yAxisIndex:0,
                     type: 'bar',
-                    barWidth:'35%',
+                    // barWidth:'35%',
                     // symbol:'none',
                     // symbolSize:0,
                     // itemStyle: {normal: {areaStyle: {type: 'default'}}},
@@ -769,7 +770,7 @@
                     xAxisIndex: 0,
                     yAxisIndex:0,
                     type: 'bar',
-                    barWidth:'35%',
+                    // barWidth:'35%',
                     // color:"yellowgreen",
                     // itemStyle:{
                     //     normal:{
@@ -786,7 +787,7 @@
                     xAxisIndex: 0,
                     yAxisIndex:0,
                     type: 'bar',
-                    barWidth:'35%',
+                    // barWidth:'35%',
                     // itemStyle: {normal: {lineStyle: {width: 3}}},
                     // data: {{l4s}}
                 },{
@@ -794,55 +795,55 @@
                     xAxisIndex: 1,
                     yAxisIndex:1,
                     type: 'bar',
-                    barWidth:'35%',
+                    // barWidth:'35%',
                 },{
                     name: '17/18',
                     xAxisIndex: 1,
                     yAxisIndex:1,
                     type: 'bar',
-                    barWidth:'35%',
+                    // barWidth:'35%',
                 },{
                     name: '18/19',
                     xAxisIndex: 1,
                     yAxisIndex:1,
                     type: 'bar',
-                    barWidth:'35%',
+                    // barWidth:'35%',
                 },{
                     name: '16/17',
                     xAxisIndex: 2,
                     yAxisIndex:2,
                     type: 'bar',
-                    barWidth:'35%',
+                    // barWidth:'35%',
                 },{
                     name: '17/18',
                     xAxisIndex: 2,
                     yAxisIndex: 2,
                     type: 'bar',
-                    barWidth:'35%',
+                    // barWidth:'35%',
                 },{
                     name: '18/19',
                     xAxisIndex: 2,
                     yAxisIndex:2,
                     type: 'bar',
-                    barWidth:'35%',
+                    // barWidth:'35%',
                 },{
                     name: '16/17',
                     xAxisIndex: 3,
                     yAxisIndex:3,
                     type: 'bar',
-                    barWidth:'35%',
+                    // barWidth:'35%',
                 },{
                     name: '17/18',
                     xAxisIndex: 3,
                     yAxisIndex:3,
                     type: 'bar',
-                    barWidth:'35%',
+                    // barWidth:'35%',
                 },{
                     name: '18/19',
                     xAxisIndex: 3,
                     yAxisIndex:3,
                     type: 'bar',
-                    barWidth:'35%',
+                    // barWidth:'35%',
                 }
             ]
         };
@@ -853,12 +854,284 @@
     </script>
 
     <script type="text/javascript">
+        // 基于准备好的dom，初始化echarts实例
+        var myChart6 = echarts.init(document.getElementById('gatheroutBBW_ZZ'), 'vintage');
+        var myl6 = {{l6|tojson}};
+        // myChart.showLoading();
+
+        // 指定图表的配置项和数据
+        var option = {
+            title: [
+            {
+                text: '北部湾到货',
+                x:'25%',
+                textAlign:'center'
+                // textStyle:{
+                //     color:'black',
+                //     fontSize:28,
+                // }
+            },{
+                text: '北部湾走货',
+                x:'75%',
+                textAlign:'center'
+            },{
+                text: '漳州到货',
+                x:'25%',
+                y:'49%',
+                textAlign:'center'
+            },{
+                text: '漳州走货',
+                x:'75%',
+                y:'49%',
+                textAlign:'center'
+            }
+            ],
+            tooltip: {
+                trigger: 'axis',
+                axisPointer:{
+                    type:'cross'
+                }
+            },
+            grid: [
+                {x: '5%', y: '7%', width: '40%', height: '38%'},
+                {x2: '5%', y: '7%', width: '40%', height: '38%'},
+                {x: '5%', y2: '5%', width: '40%', height: '38%'},
+                {x2: '5%', y2: '5%', width: '40%', height: '38%'}
+            ],
+            legend: [{
+                data:['16/17', '17/18', '18/19'],
+                x:'15%',
+                y:25,
+            },{
+                data:['16/17', '17/18', '18/19'],
+                x:'65%',
+                y:25
+            },{
+                data:['16/17', '17/18', '18/19'],
+                x:'15%',
+                y:'53%',
+            },{
+                data:['16/17', '17/18', '18/19'],
+                x:'65%',
+                y:'53%',
+            }],
+            xAxis: [{
+                type:'category',
+                gridIndex: 0,
+                axisLabel:{
+                    // formatter:'{{value}}kg'
+                    formatter: function (value, index) {
+                        var date = new Date(value);
+                        var texts = [date.getMonth()+1, date.getDate()];
+                        return texts.join('/');
+                    },
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getFullYear(), date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },
+                // data: []
+            },{
+                type:'category',
+                gridIndex: 1,
+                axisLabel:{
+                    // formatter:'{{value}}kg'
+                    formatter: function (value, index) {
+                        var date = new Date(value);
+                        var texts = [date.getMonth()+1, date.getDate()];
+                        return texts.join('/');
+                    },
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getFullYear(), date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },
+            },{
+                type:'category',
+                gridIndex: 2,
+                axisLabel:{
+                    // formatter:'{{value}}kg'
+                    formatter: function (value, index) {
+                        var date = new Date(value);
+                        var texts = [date.getMonth()+1, date.getDate()];
+                        return texts.join('/');
+                    },
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getFullYear(), date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },
+            },{
+                type:'category',
+                gridIndex: 3,
+                axisLabel:{
+                    // formatter:'{{value}}kg'
+                    formatter: function (value, index) {
+                        var date = new Date(value);
+                        var texts = [date.getMonth()+1, date.getDate()];
+                        return texts.join('/');
+                    },
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getFullYear(), date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },                    
+            }            
+            ],
+            yAxis: [
+                {
+                    gridIndex: 0, 
+                    type:'value', 
+                },{
+                    gridIndex: 1, 
+                    type:'value'
+                },{
+                    gridIndex: 2, 
+                    type:'value',
+                },{
+                    gridIndex: 3, 
+                    type:'value'
+                }
+            ],
+            // dataZoom: [
+            //     {
+            //         type: 'slider',
+            //         start:0,
+            //         end:100
+            //     }
+            // ],
+            dataset:{
+                dimensions: ['date', 'gatherBBW_2016_2017', 'gatherBBW_2017_2018', 'gatherBBW_2018_2019', 'outBBW_2016_2017', 'outBBW_2017_2018', 'outBBW_2018_2019', 'gatherZZ_2016_2017', 'gatherZZ_2017_2018', 'gatherZZ_2018_2019', 'outZZ_2016_2017', 'outZZ_2017_2018', 'outZZ_2018_2019'],
+                source: myl6
+            },
+            series: [
+                {
+                    name: '16/17',
+                    xAxisIndex: 0,
+                    yAxisIndex:0,
+                    type: 'bar',
+                    // barWidth:'35%',
+                    // symbol:'none',
+                    // symbolSize:0,
+                    // itemStyle: {normal: {areaStyle: {type: 'default'}}},
+                    // data: {{l4}}
+                },
+                {
+                    name: '17/18',
+                    xAxisIndex: 0,
+                    yAxisIndex:0,
+                    type: 'bar',
+                    // barWidth:'35%',
+                    // color:"yellowgreen",
+                    // itemStyle:{
+                    //     normal:{
+                    //         color:function(params){
+                    //             console.log(params);
+                    //             if (params.data.NorthCarryoutChange>0) {return 'red'} else {return 'green'}
+                    //         }
+                    //     }
+                    // }
+                    // data: {{l4s}}
+                },
+                {
+                    name: '18/19',
+                    xAxisIndex: 0,
+                    yAxisIndex:0,
+                    type: 'bar',
+                    // barWidth:'35%',
+                    // itemStyle: {normal: {lineStyle: {width: 3}}},
+                    // data: {{l4s}}
+                },{
+                    name: '16/17',
+                    xAxisIndex: 1,
+                    yAxisIndex:1,
+                    type: 'bar',
+                    // barWidth:'35%',
+                },{
+                    name: '17/18',
+                    xAxisIndex: 1,
+                    yAxisIndex:1,
+                    type: 'bar',
+                    // barWidth:'35%',
+                },{
+                    name: '18/19',
+                    xAxisIndex: 1,
+                    yAxisIndex:1,
+                    type: 'bar',
+                    // barWidth:'35%',
+                },{
+                    name: '16/17',
+                    xAxisIndex: 2,
+                    yAxisIndex:2,
+                    type: 'bar',
+                    // barWidth:'35%',
+                },{
+                    name: '17/18',
+                    xAxisIndex: 2,
+                    yAxisIndex: 2,
+                    type: 'bar',
+                    // barWidth:'35%',
+                },{
+                    name: '18/19',
+                    xAxisIndex: 2,
+                    yAxisIndex:2,
+                    type: 'bar',
+                    // barWidth:'35%',
+                },{
+                    name: '16/17',
+                    xAxisIndex: 3,
+                    yAxisIndex:3,
+                    type: 'bar',
+                    // barWidth:'35%',
+                },{
+                    name: '17/18',
+                    xAxisIndex: 3,
+                    yAxisIndex:3,
+                    type: 'bar',
+                    // barWidth:'35%',
+                },{
+                    name: '18/19',
+                    xAxisIndex: 3,
+                    yAxisIndex:3,
+                    type: 'bar',
+                    // barWidth:'35%',
+                }
+            ]
+        };
+
+
+        // 使用刚指定的配置项和数据显示图表。
+        myChart6.setOption(option);
+    </script>
+
+    <script type="text/javascript">
         window.onresize = function(){
             myChart1.resize()
             myChart2.resize()
             myChart3.resize()
             myChart4.resize()
             myChart5.resize()
+            myChart6.resize()
         }
     </script>
 
